tests/golden/type_errors/struct_method_unknown_method.cd
struct Person { name: string }
impl Person { fun greet(): string { return this.name; } }
let p: Person = Person { name: "Ada" };
print p.missing();
